음식정보 사이트

--- a/src/assets/scss/setting/common.scss
+++ b/src/assets/scss/setting/common.scss
@@ -11,6 +11,7 @@ body {
         font-size: 1.25rem;
         position: relative;
         z-index: 10;
+        color: var(--black);
 
         em {
             position: relative;
